--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
     <head>
         <title>Kittech's Website</title>
     </head>
+
+    <body>
+        Welcome to my website!
+    </body>
 </html>
