--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 
-<html>
-    <head>
-        <title>Kittech's Website</title>
-    </head>
+<head>
+    <title>Kittech's Website</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js" defer></script>
+</head>
 
-    <body>
-        <h1>Welcome to my website!</h1>
-    </body>
-</html>
+<body>
+    <div class="centered-div">
+        <header>
+            <h1 class="fira-sans-semibold center-text unselectable" id="header"></h1>
+        </header>
+    </div>
+    <div class="centered-div">
+        <h2 class="fira-sans-semibold">Who am I?</h2>
+        <p class="fira-sans-regular">test2</details>
+    </div>
+</body>
