--- a/index.html
+++ b/index.html
@@ -2,18 +2,30 @@
 
 <head>
     <title>Kittech's Website</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My personal website">
+    <meta name="keywords"
+        content="website, personal, dev, developer, html, css, js, rust, c++, c#, java, kotlin, software, engineer, engineering, programming, developing, programmer, hobby, silly, cat">
+    <meta name="author" content="Kittech">
+
+
     <link rel="stylesheet" href="main.css">
     <script src="main.js" defer></script>
 </head>
 
 <body>
-    <div class="centered-div">
+    <div class="centered-div main-div">
         <header>
             <h1 class="fira-sans-semibold center-text unselectable" id="header"></h1>
         </header>
+        <div class="centered-div sub-div">
+            <header>
+                <h2 class="fira-sans-semibold center-text">Who am I?</h1>
+            </header>
+            <p class="fira-sans-regular">test2</p>
+        </div>
     </div>
-    <div class="centered-div">
-        <h2 class="fira-sans-semibold">Who am I?</h2>
-        <p class="fira-sans-regular">test2</details>
-    </div>
+
 </body>
