Added social medias

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Kittech's Website</title>
+    <title>🐈 Kittech's Website</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,13 +18,29 @@
 <body>
     <div class="centered-div main-div">
         <header>
-            <h1 class="fira-sans-semibold center-text unselectable" id="header"></h1>
+            <h1 class="fira-sans-semibold center-text unselectable" id="title"></h1>
         </header>
         <div class="centered-div sub-div">
             <header>
-                <h2 class="fira-sans-semibold center-text">Who am I?</h1>
+                <h2 class="fira-sans-semibold center-text" id="whoami">Who am I? 🐈</h1>
             </header>
-            <p class="fira-sans-regular">test2</p>
+            <p class="fira-sans-regular">I'm just silly programmer who does programming for the sake of it, just doing
+                silly projects ¯\_(ツ)_/¯ (I write poems sometimes)</p>
+        </div>
+        <div class="centered-div sub-div">
+            <header>
+                <h2 class="fira-sans-semibold center-text" id="whoami">My social media 🌐</h1>
+            </header>
+            <ul>
+                <li><a href="https://fxtwitter.com/kittech0" class="fira-sans-regular">Twitter</a></li>
+                <li><a href="https://github.com/kittech0" class="fira-sans-regular">GitHub</a></li>
+            </ul>
+        </div>
+        <div class="centered-div sub-div">
+            <header>
+                <h2 class="fira-sans-semibold center-text" id="whoami">What do I know? 📚</h1>
+            </header>
+            <p class="fira-sans-regular"></p>
         </div>
     </div>
 
