Finishing the website

--- a/index.html
+++ b/index.html
@@ -16,32 +16,45 @@
 </head>
 
 <body>
-    <div class="centered-div main-div">
-        <header>
-            <h1 class="fira-sans-semibold center-text unselectable" id="title"></h1>
+    <div class="centered-div" id="main-div">
+        <header id="title">
+            <h1 class="fira-sans-semibold center-text unselectable" id="title-text">🐈</h1>
         </header>
-        <div class="centered-div sub-div">
+        <hr>
+
+        <nav class="center-text">
+            <a class="fira-sans-regular" href="#aboutme">About me</a>
+            <a class="fira-sans-regular" href="#places">My places on the Internet</a>
+            <a class="fira-sans-regular" href="#projects">Projects</a>
+        </nav>
+
+        <article class="centered-div sub-div" id="aboutme">
             <header>
-                <h2 class="fira-sans-semibold center-text" id="whoami">Who am I? 🐈</h1>
+                <h2 class="fira-sans-semibold center-text">About me 🐈</h2>
             </header>
-            <p class="fira-sans-regular">I'm just silly programmer who does programming for the sake of it, just doing
-                silly projects ¯\_(ツ)_/¯ (I write poems sometimes)</p>
-        </div>
-        <div class="centered-div sub-div">
+            <hr>
+            <p class="fira-sans-regular">My nickname is Kittech. I'm just a silly programmer who does programming for
+                the sake of it, just doing silly projects ¯\_(ツ)_/¯ (I write poems sometimes).</p>
+        </article>
+
+        <article class="centered-div sub-div" id="places">
             <header>
-                <h2 class="fira-sans-semibold center-text" id="whoami">My social media 🌐</h1>
+                <h2 class="fira-sans-semibold center-text">My places on the Internet 🌐</h2>
             </header>
+            <hr>
             <ul>
                 <li><a href="https://fxtwitter.com/kittech0" class="fira-sans-regular">Twitter</a></li>
                 <li><a href="https://github.com/kittech0" class="fira-sans-regular">GitHub</a></li>
             </ul>
-        </div>
-        <div class="centered-div sub-div">
+        </article>
+
+        <article class="centered-div sub-div" id="projects">
             <header>
-                <h2 class="fira-sans-semibold center-text" id="whoami">What do I know? 📚</h1>
+                <h2 class="fira-sans-semibold center-text">Projects 📚</h2>
             </header>
-            <p class="fira-sans-regular"></p>
-        </div>
+            <hr>
+            <p class="fira-sans-regular">Coming soon...</p>
+        </article>
     </div>
 
 </body>
