--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>🐈 Kittech's Website</title>
+    <title>🐈 Kittech's Website 🐈</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +11,8 @@
     <meta name="author" content="Kittech">
 
 
-    <link rel="stylesheet" href="main.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="style/main.css">
+    <script src="script/main.js" defer></script>
 </head>
 
 <body>
@@ -43,8 +43,9 @@
             </header>
             <hr>
             <ul>
-                <li><a href="https://fxtwitter.com/kittech0" class="fira-sans-regular">Twitter</a></li>
-                <li><a href="https://github.com/kittech0" class="fira-sans-regular">GitHub</a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="https://fxtwitter.com/kittech0" class="fira-sans-regular">Twitter</a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/kittech0" class="fira-sans-regular">GitHub</a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="https://modrinth.com/user/kittech" class="fira-sans-regular">Modrinth</a></li>
             </ul>
         </article>
 
@@ -53,8 +54,16 @@
                 <h2 class="fira-sans-semibold center-text">Projects 📚</h2>
             </header>
             <hr>
-            <p class="fira-sans-regular">Coming soon...</p>
+            <ul>
+                <li><a target="_blank" rel="noopener noreferrer" href="https://modrinth.com/modpack/comely-adventure" class="fira-sans-regular">Comely
+                        Adventure</a></li>
+            </ul>
         </article>
-    </div>
+        <div id="sourcecode">
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/kittech0/kittech0.github.io" class="fira-sans-regular">
+                Source code 👨‍💻
+            </a>
+        </div>
 
+    </div>
 </body>
