Changed the navbar text

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <hr>
 
         <nav class="center-text">
-            <a class="fira-sans-regular" href="#aboutme">About me</a>
-            <a class="fira-sans-regular" href="#places">My places on the Internet</a>
-            <a class="fira-sans-regular" href="#projects">Projects</a>
-            <a class="fira-sans-regular" href="#prayers">Prayers</a>
+            <a class="fira-sans-regular" href="#aboutme">#aboutme</a>
+            <a class="fira-sans-regular" href="#places">#places</a>
+            <a class="fira-sans-regular" href="#projects">#projects</a>
+            <a class="fira-sans-regular" href="#prayers">#prayers</a>
         </nav>
 
         <article class="centered-div sub-div" id="aboutme">
