Added blog site

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a class="fira-sans-regular" href="#places">#places</a>
             <a class="fira-sans-regular" href="#projects">#projects</a>
             <a class="fira-sans-regular" href="#prayers">#prayers</a>
+            <a class="fira-sans-regular" href="blog/">/blog</a>
         </nav>
 
         <article class="centered-div sub-div" id="aboutme">
@@ -80,7 +81,7 @@
                     </a></li>
             </ul>
         </article>
-        <div id="sourcecode">
+        <div id="sourcecode" class="right-text">
             <a target="_blank" rel="noopener noreferrer" href="https://github.com/kittech0/kittech0.github.io"
                 class="fira-sans-regular">
                 Source code 👨‍💻
