--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="centered-div" id="main-div">
         <header id="title">
-            <h1 class="fira-sans-semibold center-text unselectable" id="title-text">🐈</h1>
+            <h1 class="fira-sans-semibold center-text unselectable" id="title-text">🐈 Kittech's Website 🐈</h1>
         </header>
         <hr>
 
