--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                         the Seven Sorrows
                         of Our Lady
                     </a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="./wepray.txt" class="fira-sans-regular link">We
+                        Pray to you O Holy Trinity
+                    </a></li>
             </ul>
         </article>
         <div id="sourcecode" class="right-text link">
