--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                     </a></li>
             </ul>
         </article>
-        <div id="sourcecode" class="right-text link">
+        <div id="sourcecode" class="right-text">
             <a target="_blank" rel="noopener noreferrer" href="https://github.com/kittech0/kittech0.github.io"
-                class="fira-sans-regular">
+                class="fira-sans-regular link">
                 Source code 👨‍💻
             </a>
         </div>
