--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                         class="fira-sans-regular link">Comely
                         Adventure
                     </a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/kittech0/sillybot"
+                        class="fira-sans-regular link">Silly Bot
+                    </a></li>
             </ul>
         </article>
         <article class="centered-div sub-div" id="prayers">
