replaced sillybot with diya

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             </header>
             <hr>
             <ul>
+                <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/kittech0/diya"
+                        class="fira-sans-regular link">Diya
+                    </a></li>
                 <li><a target="_blank" rel="noopener noreferrer" href="https://modrinth.com/modpack/comely-adventure"
                         class="fira-sans-regular link">Comely
                         Adventure
-                    </a></li>
-                <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/kittech0/sillybot"
-                        class="fira-sans-regular link">Silly Bot
                     </a></li>
             </ul>
         </article>
