--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="main">
-        <h1>Construction</h1>
+        <h1 class="radon-font">Construction</h1>
         <img src="assets/maxwell.webp" alt="Construction" />
     </div>
 </body>
