readded old one and moved new one

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="main">
         <h1 class="radon-font">Construction</h1>
         <img src="assets/maxwell.webp" alt="Construction" />
+        <br />
+        <a class="radon-font" href="old/">Old one</a>
     </div>
 </body>
-
-<style s>
