added dark mode

--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
     <title>Kittech</title>
-
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="assets/style/main.css" rel="stylesheet" />
+    <meta charset="UTF-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link href="assets/style/main.css" rel="stylesheet"/>
 </head>
-
 <body>
-    <div id="main">
-        <h1 class="radon-font">Construction</h1>
-        <img src="assets/maxwell.webp" alt="Construction" />
-        <br />
-        <a class="radon-font" href="old/">Old one</a>
-    </div>
+
+<button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
+
+<div id="main">
+    <h1 class="radon-font">Construction</h1>
+    <img alt="Construction" src="assets/imgs/maxwell.webp"/>
+    <br/>
+    <a class="radon-font" href="old/">Old one</a>
+</div>
+
+<script defer src="assets/script/darkmode.js"></script>
+
 </body>
+</html>
