fixing button and colors

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
-<button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
 
 <div id="main">
+    <button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
     <h1 class="radon-font">Construction</h1>
     <img alt="Construction" src="assets/imgs/maxwell.webp"/>
     <br/>
     <a class="radon-font" href="old/">Old one</a>
 </div>
+
+<p class="radon-font" id="author-text">Made by kittech 😼</p>
 
 <script defer src="assets/script/darkmode.js"></script>
 
