--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Kittech</title>
+    <title>😼Kittech's place😼</title>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link href="assets/style/main.css" rel="stylesheet"/>
@@ -11,10 +11,12 @@
 
 <div id="main">
     <button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
-    <h1 class="radon-font">Construction</h1>
+    <h1 class="radon-font">Kittech's place</h1>
+    <nav class="nano-font navigation">
+    </nav>
     <img alt="Construction" src="assets/imgs/maxwell.webp"/>
     <br/>
-    <a class="radon-font" href="old/">Old one</a>
+    <a class="nano-font" href="old/">Old one</a>
 </div>
 
 <p class="radon-font" id="author-text">Made by kittech 😼</p>
