added meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link href="assets/style/main.css" rel="stylesheet"/>
+    <!-- Primary Meta Tags -->
+    <meta content="Kittech's website" name="title"/>
+    <meta content="Silly IT guy that also is catholic." name="description"/>
+    <meta content="kittech" name="author"/>
+    <meta content="it,technology,tech,cat,kitty,kittech,cats,christian,engineer,programmer,programming"
+          name="keywords"/>
+    <meta content="website" property="og:type"/>
+    <meta content="summary_large_image" name="twitter:card" >
+    <!-- Open Graph / Facebook -->
+    <meta content="website" property="og:type"/>
+    <meta content="https://kitty.engineer/" property="og:url"/>
+    <meta content="Kittech's website" property="og:title"/>
+    <meta content="Silly IT guy that also is catholic." property="og:description"/>
+    <meta content="https://kitty.engineer/assets/imgs/maxwell.webp" property="og:image"/>
+
+    <!-- Twitter -->
+    <meta content="summary_large_image" property="twitter:card"/>
+    <meta content="https://kitty.engineer/" property="twitter:url"/>
+    <meta content="Kittech's website" property="twitter:title"/>
+    <meta content="Silly IT guy that also is catholic." property="twitter:description"/>
+    <meta content="https://kitty.engineer/assets/imgs/maxwell.webp" property="twitter:image"/>
 </head>
 <body>
 
