--- a/index.html
+++ b/index.html
@@ -2,25 +2,20 @@
 <html lang="en">
 <head>
     <title>😼Kittech's place😼</title>
+    <link href="assets/imgs/icon.webp" rel="icon">
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link href="assets/style/main.css" rel="stylesheet"/>
-    <!-- Primary Meta Tags -->
-    <meta content="Kittech's website" name="title"/>
     <meta content="Silly IT guy that also is catholic." name="description"/>
     <meta content="kittech" name="author"/>
     <meta content="it,technology,tech,cat,kitty,kittech,cats,christian,engineer,programmer,programming"
           name="keywords"/>
-    <meta content="website" property="og:type"/>
-    <meta content="summary_large_image" name="twitter:card" >
-    <!-- Open Graph / Facebook -->
     <meta content="website" property="og:type"/>
     <meta content="https://kitty.engineer/" property="og:url"/>
     <meta content="Kittech's website" property="og:title"/>
     <meta content="Silly IT guy that also is catholic." property="og:description"/>
     <meta content="https://kitty.engineer/assets/imgs/maxwell.webp" property="og:image"/>
 
-    <!-- Twitter -->
     <meta content="summary_large_image" property="twitter:card"/>
     <meta content="https://kitty.engineer/" property="twitter:url"/>
     <meta content="Kittech's website" property="twitter:title"/>
@@ -29,8 +24,7 @@
 </head>
 <body>
 
-
-<div id="main">
+<main>
     <button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
     <h1 class="radon-font">Kittech's place</h1>
     <nav class="nano-font navigation">
@@ -38,9 +32,11 @@
     <img alt="Construction" src="assets/imgs/maxwell.webp"/>
     <br/>
     <a class="nano-font" href="old/">Old one</a>
-</div>
+</main>
 
-<p class="radon-font" id="author-text">Made by kittech 😼</p>
+<footer>
+    <p class="radon-font">Made by kittech 😼</p>
+</footer>
 
 <script defer src="assets/script/darkmode.js"></script>
 
