--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>😼Kittech's place😼</title>
-    <link href="assets/imgs/icon.webp" rel="icon">
+    <link href="/assets/imgs/icon.webp" rel="icon">
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="assets/style/main.css" rel="stylesheet"/>
+    <link href="/assets/style/main.css" rel="stylesheet"/>
     <meta content="Silly IT guy that also is catholic." name="description"/>
     <meta content="kittech" name="author"/>
     <meta content="it,technology,tech,cat,kitty,kittech,cats,christian,engineer,programmer,programming"
@@ -16,7 +16,6 @@
     <meta content="Silly IT guy that also is catholic." property="og:description"/>
     <meta content="https://kitty.engineer/assets/imgs/maxwell.webp" property="og:image"/>
 
-    <meta content="summary_large_image" property="twitter:card"/>
     <meta content="https://kitty.engineer/" property="twitter:url"/>
     <meta content="Kittech's website" property="twitter:title"/>
     <meta content="Silly IT guy that also is catholic." property="twitter:description"/>
@@ -29,16 +28,16 @@
     <h1 class="radon-font">Kittech's place</h1>
     <nav class="nano-font navigation">
     </nav>
-    <img alt="Construction" src="assets/imgs/maxwell.webp"/>
+    <img alt="Construction" src="/assets/imgs/maxwell.webp"/>
     <br/>
-    <a class="nano-font" href="old/">Old one</a>
+    <a class="nano-font" href="/old/">Old one</a>
 </main>
 
 <footer>
     <p class="radon-font">Made by kittech 😼</p>
 </footer>
 
-<script defer src="assets/script/darkmode.js"></script>
+<script defer src="/assets/script/darkmode.js"></script>
 
 </body>
 </html>
