Cleaned up javascript and html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <title>😼Kittech's place😼</title>
     <link href="/assets/imgs/icon.webp" rel="icon">
+
+    <link href="/assets/style/main.css" rel="stylesheet"/>
+    <link href="/assets/style/text.css" rel="stylesheet"/>
+    <link href="/assets/style/toggletheme.css" rel="stylesheet"/>
+
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="/assets/style/main.css" rel="stylesheet"/>
     <meta content="Silly IT guy that also is catholic." name="description"/>
     <meta content="kittech" name="author"/>
     <meta content="it,technology,tech,cat,kitty,kittech,cats,christian,engineer,programmer,programming"
@@ -26,7 +30,8 @@
 <main>
     <button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
     <h1 class="radon-font">Kittech's place</h1>
-    <nav class="nano-font navigation">
+    <nav>
+        <a class="nano-font" href="#">About me</a>
     </nav>
     <img alt="Construction" src="/assets/imgs/maxwell.webp"/>
     <br/>
@@ -37,7 +42,6 @@
     <p class="radon-font">Made by kittech 😼</p>
 </footer>
 
-<script defer src="/assets/script/darkmode.js"></script>
-
+<script defer src="/assets/script/main.js"></script>
 </body>
 </html>
