--- a/dev/index.html
+++ b/dev/index.html
@@ -4,9 +4,9 @@
     <title>😼Kittech's place😼</title>
     <link href="/assets/imgs/icon.webp" rel="icon">
 
-    <link href="/assets/style/main.css" rel="stylesheet"/>
-    <link href="/assets/style/text.css" rel="stylesheet"/>
-    <link href="/assets/style/toggletheme.css" rel="stylesheet"/>
+    <link href="/style/main.css" rel="stylesheet"/>
+    <link href="/style/text.css" rel="stylesheet"/>
+    <link href="/style/toggletheme.css" rel="stylesheet"/>
 
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -42,6 +42,6 @@
     <p class="radon-font">Made by kittech 😼</p>
 </footer>
 
-<script defer src="/assets/script/main.js"></script>
+<script defer src="/script/main.js"></script>
 </body>
 </html>
