--- a/dev/index.html
+++ b/dev/index.html
@@ -72,9 +72,9 @@
         <link href="/style/text.css" rel="stylesheet"/>
         <link href="/style/toggletheme.css" rel="stylesheet"/>
     </noscript>
-    <link href="/style/main.css" rel="stylesheet"/>
-    <link href="/style/text.css" rel="stylesheet"/>
-    <link href="/style/toggletheme.css" rel="stylesheet"/>
+    <link as="style" href="/style/main.css" onload="this.rel='stylesheet'" rel="preload"/>
+    <link as="style" href="/style/text.css" onload="this.rel='stylesheet'" rel="preload"/>
+    <link as="style" href="/style/toggletheme.css" onload="this.rel='stylesheet'" rel="preload"/>
 
 
     <meta charset="UTF-8"/>
