--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
     <style>
         :root {
             --body-bg: #F4EAD5;
-            --text-color: #6B5B45;
+            --text-color: #5A493A;
             --main-bg: #FAF0E6;
             --link-color: #008B8B;
             --link-visited-color: #CD5C5C;
