--- a/dev/index.html
+++ b/dev/index.html
@@ -108,7 +108,8 @@
 
     </nav>
 
-    <img alt="Construction" fetchpriority="high" id="main" is="image" rel="preload" src="/assets/imgs/maxwell.webp"/>
+    <img alt="Construction" fetchpriority="high" id="main" is="image" rel="preload" src="/assets/imgs/maxwell.webp"
+         style="aspect-ratio: auto 498 / 280"/>
     <p class="nano-font" id="aboutme" style="display: none">
         Hello, I'm kittech.
         My hobby is programming and theology.
