--- a/dev/aboutme/index.html
+++ b/dev/aboutme/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>😼Kittech's place😼</title>
+    <title>😼Kittech's about me😼</title>
     <link href="/_assets/imgs/icon.webp" rel="icon">
 
     <link href="/_assets/style/main.css" rel="stylesheet"/>
@@ -16,25 +16,23 @@
     <meta content="it,technology,tech,cat,kitty,kittech,cats,christian,engineer,programmer,programming"
           name="keywords"/>
     <meta content="website" property="og:type"/>
-    <meta content="https://kitty.engineer/" property="og:url"/>
-    <meta content="Kittech's website" property="og:title"/>
+    <meta content="https://kitty.engineer/aboutme" property="og:url"/>
+    <meta content="Kittech's about me" property="og:title"/>
     <meta content="Silly IT guy that also is catholic." property="og:description"/>
     <meta content="https://kitty.engineer/_assets/imgs/maxwell.webp" property="og:image"/>
 
-    <meta content="https://kitty.engineer/" property="twitter:url"/>
-    <meta content="Kittech's website" property="twitter:title"/>
+    <meta content="https://kitty.engineer/aboutme" property="twitter:url"/>
+    <meta content="Kittech's about me" property="twitter:title"/>
     <meta content="Silly IT guy that also is catholic." property="twitter:description"/>
     <meta content="https://kitty.engineer/_assets/imgs/maxwell.webp" property="twitter:image"/>
     <script>const _ = 0;</script>
-
 </head>
 <body>
-<script defer src="/_assets/script/main.js"></script>
 
 
 <main>
     <button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
-    <h1 class="radon-font">Kittech's place</h1>
+    <h1 class="radon-font">Kittech's books</h1>
     <nav>
         <a class="nano-font" href="/#">Main</a>
         <a class="nano-font" href="/aboutme">About me</a>
@@ -43,15 +41,23 @@
         <a class="nano-font" href="/books">Books I read</a>
         <a class="nano-font" href="/projects">Projects</a>
     </nav>
-    <img alt="Construction" fetchpriority="high" is="image" rel="preload"
-         src="/_assets/imgs/maxwell.webp"
-         style="aspect-ratio: auto 498 / 280"/>
+
+    <article>
+        <p class="nano-font left-text">
+            Hello, I'm kittech.
+            My hobby is programming and theology.
+            I'm right now student of IT and plan to become an IT specialist.
+            My favorite programming language is 🦀rust🦀 and
+            on my laptop I use Fedora Linux.
+        </p>
+    </article>
 </main>
 
 <footer>
     <p class="radon-font">Made by kittech 😼</p>
 </footer>
 
+<script defer src="/_assets/script/main.js"></script>
 
 </body>
 </html>
