--- a/dev/projects/index.html
+++ b/dev/projects/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>😼Kittech's place😼</title>
+    <title>😼Kittech's projects😼</title>
     <link href="/_assets/imgs/icon.webp" rel="icon">
+
 
     <link href="/_assets/style/main.css" rel="stylesheet"/>
     <link href="/_assets/style/text.css" rel="stylesheet"/>
     <link href="/_assets/style/toggletheme.css" rel="stylesheet"/>
     <link href="/_assets/style/content.css" rel="stylesheet"/>
+
 
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -16,25 +18,23 @@
     <meta content="it,technology,tech,cat,kitty,kittech,cats,christian,engineer,programmer,programming"
           name="keywords"/>
     <meta content="website" property="og:type"/>
-    <meta content="https://kitty.engineer/" property="og:url"/>
-    <meta content="Kittech's website" property="og:title"/>
+    <meta content="https://kitty.engineer/projects" property="og:url"/>
+    <meta content="Kittech's projects" property="og:title"/>
     <meta content="Silly IT guy that also is catholic." property="og:description"/>
     <meta content="https://kitty.engineer/_assets/imgs/maxwell.webp" property="og:image"/>
 
-    <meta content="https://kitty.engineer/" property="twitter:url"/>
-    <meta content="Kittech's website" property="twitter:title"/>
+    <meta content="https://kitty.engineer/projects" property="twitter:url"/>
+    <meta content="Kittech's projects" property="twitter:title"/>
     <meta content="Silly IT guy that also is catholic." property="twitter:description"/>
     <meta content="https://kitty.engineer/_assets/imgs/maxwell.webp" property="twitter:image"/>
     <script>const _ = 0;</script>
-
 </head>
 <body>
-<script defer src="/_assets/script/main.js"></script>
 
 
 <main>
     <button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
-    <h1 class="radon-font">Kittech's place</h1>
+    <h1 class="radon-font">Kittech's projects</h1>
     <nav>
         <a class="nano-font" href="/#">Main</a>
         <a class="nano-font" href="/aboutme">About me</a>
@@ -43,15 +43,16 @@
         <a class="nano-font" href="/books">Books I read</a>
         <a class="nano-font" href="/projects">Projects</a>
     </nav>
-    <img alt="Construction" fetchpriority="high" is="image" rel="preload"
-         src="/_assets/imgs/maxwell.webp"
-         style="aspect-ratio: auto 498 / 280"/>
+    <article>
+        <h2 class="radon-font">Empty</h2>
+    </article>
 </main>
 
 <footer>
     <p class="radon-font">Made by kittech 😼</p>
 </footer>
 
+<script defer src="/_assets/script/main.js"></script>
 
 </body>
 </html>
