--- a/dev/index.html
+++ b/dev/index.html
@@ -29,23 +29,25 @@
 
 </head>
 <body>
-<script defer src="/_assets/script/main.js"></script>
 
-
+<script defer rel="preload" src="/_assets/script/pages.js"></script>
+<script defer rel="preload" src="/_assets/script/main.js"></script>
 <main>
     <button aria-label="Toggle dark mode" id="mode-toggle">☀️</button>
     <h1 class="radon-font">Kittech's place</h1>
     <nav>
-        <a class="nano-font" href="/#">Main</a>
-        <a class="nano-font" href="/aboutme">About me</a>
-        <a class="nano-font" href="/places">Places</a>
-        <a class="nano-font" href="/distributism">Distributism</a>
-        <a class="nano-font" href="/books">Books I read</a>
-        <a class="nano-font" href="/projects">Projects</a>
+        <a class="nano-font" href="#">Main</a>
+        <a class="nano-font" href="#aboutme">About me</a>
+        <a class="nano-font" href="#places">Places</a>
+        <a class="nano-font" href="#distributism">Distributism</a>
+        <a class="nano-font" href="#books">Books I read</a>
+        <a class="nano-font" href="#projects">Projects</a>
     </nav>
-    <img alt="Construction" fetchpriority="high" is="image" rel="preload"
-         src="/_assets/imgs/maxwell.webp"
-         style="aspect-ratio: auto 498 / 280"/>
+    <div id="content"><img alt="Construction"
+                           loading="eager"
+                           rel="preload" src="/_assets/imgs/maxwell.webp" style="aspect-ratio: 498 / 280"/></div>
+
+
 </main>
 
 <footer>
