--- a/dev/_pages/distributism.html
+++ b/dev/_pages/distributism.html
@@ -38,7 +38,7 @@
                 href="https://ia601305.us.archive.org/31/items/penty-distributism-a-manifesto/%5BPenty%5D%20Distributism%20A%20Manifesto.pdf"
                 rel="noopener noreferrer"
                 target="_blank"
-        >Manifesto of Distributionism
+        >Distributism: A Manifesto
         </a>
     </li>
 
